# rag-system

./: .env.pub  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
configs/: dev.yml
notebooks/: test.ipynb
scripts/: smoke_config.py  smoke_context_pipeline.py  smoke_embedding.py  smoke_generator.py  smoke_qdrant_collection.py  smoke_qdrant_upsert.py  smoke_rag_service.py  smoke_registry.py  smoke_retriever.py  smoke_test_api.py  smoke_vector_search.py
src/: __init__.py
src/api/: app.py  dependencies.py  ingestion_routes.py  routes.py  schemas.py
src/chunking/: __init__.py  base.py  model.py  recursive_chunker.py
src/container/: application_container.py
src/context/: BasicContextBuilder.py  ContextAssembler.py  base.py  expander.py  model.py
src/core/: __init__.py  chunk.py  config.py  llm_config.py  search.py
src/embeddings/: __init__.py  base.py  bm25_service.py  model.py  sentence_transformer_service.py
src/generator/: BasicPromptGenerator.py  base.py  lcel_generator.py
src/ingestion/: __init__.py  document.py  document_ingestion_service.py  document_registry.py  document_sync_service.py  file_watcher.py  hash_utils.py  models.py  run_watcher.py  watcher_service.py
src/llm/: base.py  google_studio.py
src/rag/: RAGService.py
tests/: config_check.py  retrival_test.py  retrival_testing.py  testDB.py  testDB_insertion.py  test_assembler.py  test_bm25_service.py  test_chunker.py  test_embedding.py  test_expander.py  test_integration_expander_assembler.py  test_pdf_loader.py  test_qdrant_store.py  test_recursive_chunker.py  test_service_boundaries.py  test_smoke_expander_assembler.py  test_sync_service.py
(+12 files in other folders)
