[project]
name = "rag-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pypdf>=6.13.1",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=5.5.1",
]
